--- a/app/views/web/static_pages/home.slim
+++ b/app/views/web/static_pages/home.slim
@@ -50,7 +50,7 @@
     .col-lg-2
     .col-lg-8
       h3 Privacy policy
-      p.text-justify App collects minimum amount of user data needed for it to function properly.
+      p.text-justify App collects minimum amount of user data needed for it to work properly.
       p.text-justify All the sensitive information like messages content, user nicknames and ids are filtered out from the logs and not stored in the database. Even if you wanted to pay us a lot for it we could not track who sent that message ;)
       p.text-justify
         span> You don't have to trust my word on that. App is
