--- a/app/views/layouts/web.slim
+++ b/app/views/layouts/web.slim
@@ -12,6 +12,6 @@ html
   body
     github class="octo-right"
       a href="https://github.com/pawurb/abot" target="_blank"
-        image src="assets/github.svg"
+        = image_tag 'github.svg'
     .container.js-data data-controller="#{@controller}" data-action="#{@action}"
       = yield
